forms-flow-theme/src/global.scss
@import "./utils/cursor.scss";
@import "./utils/overflow.scss";
@import "./components/toastifyOverride.scss";
@import "./overrideClasses/bootstrapOverride.scss";
@import "./overrideClasses/formioComponentOverride.scss";
@import "./baseStyle.scss";
@import "./components/custom-table.scss";
@import "./components/button.scss";

:root {
  --color-primary: #0072ed;
  --color-secondary: #6c757d;
  --color-success: #3fb618;
  --color-info: #4d61fc;
  --color-warning: #fcba19;
  --color-red: #ff0039;
  --color-light: #f8f9fa;
  --color-dark: #373a3c;
  --color-black: #000;
  --color-indigo: #6610f2;
  --color-purple: #613d7c;
  --color-white: #fff;
  --color-white: #fff;
  --color-pink: #e83e8c;
  --color-teal: #20c997;
  --color-orange: #f2661f;
  --color-cyan: #9954bb;
  --color-gray-100: #f8f9fa;
  --colorgray-200: #e9ecef;
  --color-gray-300: #dee2e6;
  --color-gray-400: #ced4da;
  --color-gray-500: #adb5bd;
  --color-gray-600: #868e96;
  --color-gray-700: #495057;
  --color-gray-800: #373a3c;
  --color-gray-900: #212529;
  --color-main-bg: #F7F7F7;
  --head-inactive: var(--color-black);
  --logo-path: "./logo.svg";
  --logo-width: 40px;
  --appname-margin-left: 0px;
  --appname-margin-right: 0px;
  --appname-margin-top: 0px;
  --appname-margin-bottom: 0px;

  --navbar-items-font-size: 16px;
  --navbar-items-font-weight: 400;

  --navbar-background: var(--color-white);
  --navbar-items: var(--color-black);
  --navbar-active: var(--color-primary);
  --button-primary-background: var(--color-primary);
  --navbar-app-name: var(--color-black);
  --navbar-logo-width: var(--logo-width);

  --navbar-logo-path: var(--logo-path);
}
 
 

.overflow-x-auto {
  overflow-x: auto;
  overflow-y: hidden;
}

.overflow-y-auto {
  overflow-y: auto;
  overflow-x: hidden;
}

.text-primary {
  color: var(--color-primary) !important;
}



.footer-text {
  font-size: 18px;
}

.btn-primary { 
  background-color: var(--button-primary-background);
}

.btn-outline-primary:not(:disabled) {
  border-color: #0071eb;
  color: #0071eb;
}

.btn-outline-primary:not(:disabled):hover {
  color: var(--color-white);
  background-color: var(--color-primary);
}

.task-container {
  height: 100% !important;
}

.logo {
  height: 1.9em;
}

h4 {
  font-size: 1.2rem;
}
 

 
 

.loader-container {
  display: flex;
  height: 80vh;
  justify-content: center;
  align-items: center;
}

.loader {
  position: absolute;
  margin: auto;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
}

.input-group .input-group-addon {
  position: absolute;
  right: 5px;
  top: 7px;
}

.input-group .radio-inline {
  margin-left: 20px;
}

.input-group label {
  margin-right: 2rem;
}

.well {
  border: 1px solid #eeeeee;
  padding: 1rem;
  background-color: #f8f8f8bf;
}

.formio-component-panel {
  border: 1px solid #eeeeee;
}

.formio-component-panel .panel-heading {
  background-color: #eeeeee;
  padding: 10px 0 10px 10px;
}

.formio-component-panel .panel-heading .panel-title i {
  font-size: 12px;
}

.panel-body {
  padding: 1.5rem 2rem 1.5rem 2rem;
}

.page-item.active .page-link {
  background-color: #036 !important;
  border-color: #56595d !important;
}

h5,
.h5 {
  font-size: 16px !important;
}

.bg-default {
  background-color: #38598a;
  border: #38598a;
  color: white !important;
}

.text-muted {
  color: #868e96 !important;
}

i.fa.fa-question-circle.text-muted {
  color: #2e96ff !important;
}

.panel-heading {
  background-color: #38598a;
  border: #38598a;
  color: white !important;
  padding: 0.75rem 1.25rem;
  margin-bottom: 8px;
}

.form-view-wrapper {
  min-height: 75vh;
}

.btn.signature-pad-refresh {
  z-index: 99 !important;
}

.formio-error-wrapper,
.has-error {
  color: red;
  background-color: #fff;
  border-color: red;
}

.formio-error-wrapper,
.has-error label {
  color: red;
}

.formio-errors .error {
  color: red;
}

.is-invalid {
  background-color: #ffd1d1;
}

.active-tab {
  background-color: transparent;
  color: var(--navbar-active) !important;
}

.active-tab-dropdown>#dashboard-dropdown {
  background-color: transparent;
  filter: invert(36%) sepia(38%) saturate(7152%) hue-rotate(227deg) brightness(101%) contrast(98%);
}

.active-tab-dropdown>#task-dropdown {
  background-color: transparent;
  filter: invert(36%) sepia(38%) saturate(7152%) hue-rotate(227deg) brightness(101%) contrast(98%);
}

.dropdown-item:hover {
  filter: none;
  background-color: #e9ecef;
}

.selected-tag {
  color: var(--color-info) !important;
  border-bottom: 1px solid var(--color-info);
  background-color: transparent;
}

.lbl-logout {
  font-size: 16px;
  color: var(--color-dark);
  margin-left: 10px;
  cursor: pointer;
}

/* .dropdown-menu:before {
  position: absolute;
  top: -7px;
  right: 9px;
  display: inline-block;
  border-right: 7px solid transparent;
  border-bottom: 7px solid #ccc;
  border-left: 7px solid transparent;
  border-bottom-color: rgba(0, 0, 0, 0.2);
  content: "";
}

.dropdown-menu:after {
  position: absolute;
  top: -6px;
  right: 10px;
  display: inline-block;
  border-right: 6px solid transparent;
  border-bottom: 6px solid #ffffff;
  border-left: 6px solid transparent;
  content: "";
} */

.taskDropdown>.dropdown-menu::before {
  left: 10%;
  right: 100%;
}

.taskDropdown>.dasboard-icon-dropdown {
  margin-bottom: 5px;
}

.taskDropdown>.task-dropdown-icon {
  margin-bottom: 1px;
}

.taskDropdown>.applications-icon-header {
  width: 23px;
  height: 23px;
  margin-bottom: 5px;
}

.taskDropdown>.dropdown-menu::after {
  left: 10%;
  right: 100%;
}

.custom-profile {
  position: absolute;
  margin-left: 220px;
  padding-bottom: 10px;
  z-index: 10;
}

.select {
  border-radius: 4px !important;
  margin-left: 8px;
  max-width: 104px;
}

.main-header { 
  display: flex;
  margin-top: 10px;
  margin-bottom: 25px;
  height: 30px;
  width: 100%;
}

@media (max-width: 768px) {
  .main-header {
    height: 70px;
    flex-direction: row;
    flex-wrap: wrap;
  }
}

.back-icon {
  display: flex;
}
 

.task-head {
  font-weight: bold;
  font-size: 30px;
  margin-left: 10px !important;
}

.icon-wp-forms {
  height: 30px;
}

.forms-text {
  vertical-align: bottom;
  margin-left: 10px;
  margin-bottom: 0px;
}

.task-head-icons {
  height: 30px;
  width: 30px;
}

.task-head-details {
  font-weight: bold;
  font-size: 25px;
  margin-left: 10px !important;
}

.icon-wp-forms {
  height: 30px;
}

.forms-text {
  vertical-align: middle;
  margin-left: 10px;
}

.btn-right {
  float: right;
  margin-left: auto;
}

.btn-outline-primary {
  border-color: #c1c2da !important;
}

.btn-center {
  float: right;
  margin-left: auto;
}

.btn.btn-link:focus,
.btn.btn-link.focus {
  box-shadow: none;
}

.div-center {
  align-self: center;
}

.tooltip-inner {
  color: black !important;
  background-color: white !important;
  border: 0.5px solid !important;
  text-align: left;
}

.navbar-brand {
  align-items: center;
}

.navbar-brand .img-fluid,
.navbar-brand .img-thumbnail {
  max-width: 100%;
  height: 100%;
}

select option:hover {
  box-shadow: 0 0 10px 100px #000 inset;
}

.modal-dialog {
  margin: 8.75rem auto !important;
}

 

#sidebar {
  background: #fff;
}
 

#sidebar ul li.active>a,
#sidebar a[aria-expanded="true"] {
  background: #fff;
}

header nav {
  border-bottom: #fff;
}

.topheading-border-bottom {
  z-index: 2000;
  border-bottom: 2px solid #4d61fc !important;
  padding: 0 0.5rem !important;
  box-shadow: 0 3px 3px -2px rgba(0, 0, 0, 0.2),
    0px 3px 4px 0px rgba(0, 0, 0, 0.14), 0px 1px 8px 0px rgba(0, 0, 0, 0.12);
}

.rounded-circle {
  border-radius: 50% !important;
  border: 2px solid lightgrey;
  height: 40px;
  width: 40px;
}

.sort-span {
  cursor: pointer;
  border: 1px solid #cecfd6;
  border-radius: 0.25rem;
  padding: 4px;
  padding-left: 6px;
  padding-top: 0.5px;
  border-radius: 6px;
  width: 35px;
}

.sort-span:hover {
  background-color: #001dff;
}

.sort-span:hover>.fa-lg-hover {
  color: white;
}

div[disabled] {
  pointer-events: none;
  opacity: 0.7;
}

.hide-scroll {
  -ms-overflow-style: none;
  scrollbar-width: none;
}

.classApplicationId {
  width: 15%;
}

.form_select {
  width: 15%;
}

.form_operation {
  width: 30%;
}

.classApplicationName {
  width: 20%;
}

.form_title {
  width: 40%;
}

.navbar-light .navbar-nav .nav-link {
  color: rgba(0, 0, 0, 0.9);
}

/* overwriting default styles */
.MuiTab-wrapper {
  font-size: 16px;
}

.formcomponents .formcomponent {
  font-size: 1em;
}

.button_font {
  font-size: 14px;
  font-weight: bold;
}

.delete_button {
  color: red;
  cursor: pointer;
  transition: transform 0.5s, color 0.5s;
}

.delete_button:hover {
  color: #cb0404;
}

.delete_button:active {
  transform: scale(1.3);
  color: transparent;
}

.custom_primary_color {
  color: #0000ff;
}

.tooltiptext {
  color: #757575;
}

.select_download {
  display: flex;
  flex-direction: row;
}

.select_text {
  font-weight: bold;
}

.select_input {
  width: 15px;
  height: 15px;
}

.form_check {
  margin-bottom: 20px;
}

a {
  color: #0000ff;
}

.info-background {
  background-color: #ffdbdb;
}

.formio-wizard-nav-container {
  display: flex;
  flex-wrap: nowrap;
  flex-direction: row;
}

.btn-wizard-nav-submit,
.btn-wizard-nav-next,
.btn-wizard-nav-previous {
  margin-left: 5px;
}

 

div.upload {
  background-color: rgb(239, 239, 239);
  border: 1px solid #ddd;
  border-radius: 5px;
  display: inline-block;
  height: 30px;
  padding: 3px 3px 3px 3px;
  position: relative;
  width: 140px;
  text-align: center;
}

div.upload:hover {
  opacity: 0.95;
}

div.upload input[type="file"] {
  display: input-block;
  width: 100%;
  height: 30px;
  opacity: 0;
  cursor: pointer;
  position: absolute;
  left: 0;
}

.uploadButton {
  background-color: #425f9c;
  border: none;
  border-radius: 3px;
  color: #fff;
  cursor: pointer;
  display: inline-block;
  height: 30px;
  margin-right: 15px;
  width: auto;
  padding: 0 20px;
  box-sizing: content-box;
}

.fileName {
  font-family: Arial;
  font-size: 14px;
}

.upload+.uploadButton {
  height: 38px;
}

.admin-container>.header-container {
  padding-top: 10px !important;
  margin-left: 3.938rem;
  margin-right: 4.188rem;
  padding-left: 1.938rem;
  padding-right: 1.938rem;
}

.head-item {
  color: var(--head-inactive);;
  cursor: pointer;
  padding-bottom: 3rem;
}

.head-active {
  color: var(--color-primary);
  border-bottom: 4px solid  var(--color-primary);
}

.padding-left-60 {
  margin-left: 60px;
}

.padding-right-60 {
  margin-left: -35px;
}

.head-rule {
  margin-top: -10px;
}

.application-head {
  font-weight: bold;
  font-size: 26px;
  display: flex;
}

.application-head-details {
  font-weight: bold;
  font-size: 30px;
  margin-left: 10px !important;
  display: inline-block;
}

.solid-list-icon {
  height: 25px;
  margin-top: 7px;
}

.application-text {
  margin-left: 10px;
}

.application-count {
  font-size: 20px;
  margin-top: 5px;
  margin-left: 5px;
}


.cursor-default {
  cursor: default !important;
}

.cursor-pointer {
  cursor: pointer !important;
}

.application-head-details{
  font-size: 25px;
}
 

hr {
  border-top: 2px solid rgba(0,0,0,.1);
}

.active-link {
  color: var(--color-primary) !important;
}

